force-app/main/default/objects/Contact/fields/Communication_List__c.field-meta.xml
<CustomField>
    <fullName>Communication_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies contacts the commercial team has defined as needing to receive mass communications.</inlineHelpText>
    <label>Communication List</label>
    <type>Checkbox</type>
</CustomField>