force-app/main/default/objects/Contact/fields/Corporate_Gift_List__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Gift_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies contacts which should receive gifts in mass mailings.</inlineHelpText>
    <label>Corporate Gift List</label>
    <type>Checkbox</type>
</CustomField>