force-app/main/default/objects/Contact/fields/Explore_Gift_List__c.field-meta.xml
<CustomField>
    <fullName>Explore_Gift_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies contacts which should receive GDM Explore gifts.</inlineHelpText>
    <label>Explore Gift List</label>
    <type>Checkbox</type>
</CustomField>